--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@prismicio/client": "^7.17.0",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.0",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.0",
+    "@types/three": "^0.174.0",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
