--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@prismicio/client": "^7.17.0",
+    "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.0",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@types/three": "^0.174.0",
+    "aceternity-ui": "^0.2.2",
     "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "next": "15.2.4",
