--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@prismicio/client": "^7.17.0",
     "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^2.0.1",
